2002-05-15  Kenneth Kocienda  <kocienda@apple.com>

	* kwq/KWQInvisibleButton.h: Changed an #include of Cocoa.h to an #import

2002-05-15  Darin Adler  <darin@apple.com>

	* kwq/KWQListImpl.mm:
	(KWQListImpl::KWQListPrivate::copyList): Take out unnecessary line of code.
	(KWQListImpl::KWQListPrivate::~KWQListPrivate): Delete the iterator nodes
	also, not just the item nodes. Fixes a storage leak.
	(KWQListIteratorImpl::KWQListIteratorPrivate::KWQListIteratorPrivate):
	Change interface to take a list pointer so we don't rely on the undefined
	behavior of &* on a null pointer.
	(KWQListImpl::addIterator): Set up the prev pointer of the old head of
	the list. This was causing the crash I was debugging.
	(KWQListIteratorImpl::operator=): Simpler implementation.

2002-05-14  Richard J. Williamson  <rjw@apple.com>

    Added another symbol for stack based event constructor.
    Change to support onLoad.
    
	* kwq/KWQKHTMLPart.mm:
	(KHTMLPart::end):    
	* libwebcore.exp:

2002-05-14  Chris Blumenberg  <cblu@apple.com>

	Changed slotData to slotData(NSString *encoding, const char *bytes, int length)

	* khtml/khtml_part.h:
	* kwq/KWQKHTMLPart.mm:
	(KHTMLPart::slotData):
	* libwebcore.exp:

2002-05-14  Darin Adler  <darin@apple.com>

	Fixed 2925291 -- CSS2 test page causes infinite recursion, crash

	* khtml/rendering/render_container.cpp: (RenderContainer::addChild):
	Add code to detect the case of a render object that uses text cell
	style but is not itself a text style, and make sure we don't try to
	nest such an object inside an infinite number of tables.

2002-05-14  Darin Adler  <darin@apple.com>

	* kwq/KWQListImpl.mm: (KWQListIteratorImpl::KWQListIteratorImpl):
	Add a missing check for a null pointer.

	* kwq/KWQGuardedPtr.mm: (KWQGuardedPtrBase::KWQGuardedPtrBase):
	Remove an unnecessary call to "toFirst", because new iterators
	already default to pointing to the first element of the list.

2002-05-13  Darin Adler  <darin@apple.com>
